# bitstream

./: CMakeLists.txt
include/bitstream/: array.h  blob.h  cached_field.h  composer.h  dcast.h  endianness.h  field.h  fixed_point.h  footprint.h  header.h  hstream.h  ifstream.h  machine.h  omftag.h  omheader.h  omstream.h  opstream.h  parser.h  remainder.h  scalable_time.h  signedness.h  sstream.h  stream.h  string.h
include/bitstream/machine/: x86.h
src/: endianness.cc  field.cc  ifstream.cc  opstream.cc  signedness.cc
test/: CMakeLists.txt  test_field.cc  test_ifstream.cc
